working on holding numbers generated

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>Crystal Collector</title>
 </head>
 <body>
 
-<h1>Crystal collector</h1>
+<h1 id="title">Crystal collector</h1>
 
-<div>Instructions</div>
+<div id="instructions">Instructions</div>
 
-<div>Wins:</div>
-<div>Losses:</div>
-<div>Number to match</div>
+<div id="wins">Wins:</div>
+<div id="losses">Losses:</div>
+<div id="numberToMatch">Number to match</div>
 
-<div>Your number so far</div>
+<div id="numberSoFar">Your number so far</div>
 
 <!--<img src="diamond.jpg"-->
 
